--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -1,4 +1,4 @@
-<ion-view title="Dashboard">
+<ion-view title="Postavke">
   <ion-content class="padding">
     <h3>Postavke</h3>
 		<div class="list">
@@ -28,7 +28,7 @@
 
 </ul>
 	</br>
-	<button class="button button-assertive ">
+	<button class="button button-assertive button-small ">
 		Submit
 	</button>
   </ion-content>
