--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -16,11 +16,11 @@
   </ion-tab>
 
 
-  <!-- Friends Tab -->
+  <!-- Friends Tab 
   <ion-tab title="Prijatelji" icon="icon ion-cloud" href="#/tab/friends">
     <ion-nav-view name="tab-friends"></ion-nav-view>
   </ion-tab>
-
+  -->
 
 
 
