--- a/templates/tab-account.html
+++ b/templates/tab-account.html
@@ -4,13 +4,13 @@
 	  <div class="row" >
 		<div class="col col-67">       
 		{{enemy.name}}</br>
-		<small>{{enemy.full_name}}</small>
+		<small>{{enemy.full_name}}</small>		
 		</div>
-		  <div class="col col-33">
+		  <!--<div class="col col-33">
 			<button  class="button button-calm button-small" ng-click="checkIn()">
 			 Prijavi se
 			 </button>
-		  </div>
+		  </div>-->
 		 </div>		
       </ion-item>
     
