--- a/templates/enemy-detail.html
+++ b/templates/enemy-detail.html
@@ -16,21 +16,22 @@
 <ion-view title="{{enemy.name}}">
   <ion-content has-header="true" padding="true">
 
-      <div class="list card">
+     
 	  <div class="row" >
 	  <div class="col col-67">
-				
-          <img ng-src="http://locarda.herokuapp.com/{{enemy.image_url}}" width="100" height="100"/>
+				          
           <h4><strong>{{enemy.name}}</strong></br> <small>{{enemy.description}}</small></br> 
-		  <!--<small>{{enemy.full_name}}&nbsp;</small></h4></br> -->
-		  <h4>{{enemy.rewards}}</h4></br> 
+		 </br> 
+		  <img ng-src="http://locarda.herokuapp.com/{{enemy.image_url}}" width="100" height="100"/>
 		  </div>
 	<div class="col col-33">
+	 <h4>{{enemy.rewards}}</h4>
 		  </br> </br> <button  class="button button-assertive " ng-click="checkIn()">
 			 Prijavi se
 	 </button>
 	 </div>
 	  </div>
+	   
 	  
       <div class="list card">         
           <a class="item item-icon-left"  ><i class="icon ion-flag"></i>Va&#353;i bodovi: <p><span class="badge badge-assertive">{{enemy.points}}4</span></p></a>
