--- a/templates/enemy-detail.html
+++ b/templates/enemy-detail.html
@@ -26,7 +26,7 @@
 		  </div>
 	<div class="col col-33">
 	 <h4>{{enemy.rewards}}</h4>
-		  </br> </br> <button  class="button button-assertive " ng-click="checkIn()">
+		  </br> </br> <button  class="button button-assertive button-small " ng-click="checkIn()">
 			 Prijavi se
 	 </button>
 	 </div>
