--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -1,4 +1,6 @@
+
 <ion-view title="Postavke">
+
   <ion-content class="padding">
 	<div class="list">
 	<label class="item item-input">
@@ -13,27 +15,11 @@
 	</label>
 	-->
 	</div>
-
-  <!--
-  <ul class="list">
-  <li class="item item-toggle">
-     Identificiraj se mail adresom?
-     <label class="toggle toggle-positive">
-       <input type="checkbox">
-       <div class="track">
-         <div class="handle"></div>
-       </div>
-     </label>
-  </li>
-  </ul>
-  -->
 	</br>
-	<button class="button button-assertive button-small ">
+	<button class="button  button-block button-assertive button-small" ng-controller="SignUpCtrl" ng-click="signUp()">
 		Registriraj
 	</button>
-	
-	<fb:login-button show-faces="true" max-rows="1" 
-	size="large"></fb:login-button>
+
 	
 	
   </ion-content>
