--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -11,7 +11,7 @@
   </ion-tab>
   
   <!-- Dashboard Tab -->
-  <ion-tab title="Postavke" icon="icon ion-home" href="#/tab/dash">
+  <ion-tab title="Postavke" icon="icon ion-gear-a" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
