place detail tweaks, custom alert  added!

--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -16,7 +16,7 @@
 	-->
 	</div>
 	</br>
-	<button class="button  button-block button-assertive button-small" ng-controller="SignUpCtrl" ng-click="signUp()">
+	<button class="button  button-block button-assertive " ng-controller="SignUpCtrl" ng-click="signUp()">
 		Registriraj
 	</button>
 
