--- a/templates/enemy-detail.html
+++ b/templates/enemy-detail.html
@@ -13,27 +13,29 @@
 </ion-view>
 -->
 
-<ion-view title="{{enemy.name}}">
+<ion-view title="{{enemy.name}} - {{enemy.description}} ">
   <ion-content has-header="true" padding="true">
 
      
 	  <div class="row" >
-	  <div class="col col-67">
-				          
-          <h4><strong>{{enemy.name}}</strong></br> <small>{{enemy.description}}</small></br> 
-		 </br> 
-		  <img ng-src="http://locarda.herokuapp.com/{{enemy.image_url}}" width="100" height="100"/>
-		  </div>
-	<div class="col col-33">
-	 <h4>{{enemy.rewards}}</h4>
-		  </br> </br> <button  class="button button-assertive button-small " ng-click="checkIn()">
-			 Prijavi se
-	 </button>
+		<div class="col col-67">		
+		<!--		          
+        <h4><strong>{{enemy.name}}</strong></br> <small>{{enemy.description}}</small></br> 
+		</br> 
+		-->
+		<img ng-src="http://locarda.herokuapp.com/{{enemy.image_url}}" width="100" height="100"/>
+		<h4>{{enemy.rewards}}</h4>
+		</div>
+		  <div class="col col-33">
+	        </br> </br> 
+		  <button  class="button button-assertive button-small icon-right ion-checkmark " ng-click="checkIn()">
+			   Prijavi se
+	      </button>
+	      </div>
 	 </div>
-	  </div>
 	   
 	  
-      <div class="list card">         
+      <div class="list card">
           <a class="item item-icon-left"  ><i class="icon ion-flag"></i>Va&#353;i bodovi: <p><span class="badge badge-assertive">{{enemy.points}}4</span></p></a>
           <a class="item item-icon-left" href="tel:{{employee.officePhone}}"><i class="icon ion-ios7-telephone"></i>Tel.<p>{{enemy.tel}}052 544 852</p></a>
           <a class="item item-icon-left" href="tel:{{employee.cellPhone}}"><i class="icon ion-ios7-telephone"></i>Mob.<p>{{enemy.mob}}098 1754 141</p></a>
