--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -1,13 +1,29 @@
 
 <ion-view title="Postavke">
 
-  <ion-content class="padding">
+  <ion-content class="padding" ng-controller="DashCtrl">
 	<div class="list">
-	<label class="item item-input">
+		<div ng-show="login_error.message" class="positive">
+			<p>{{login_error.message}}</p>
+		</div>
+		
+
+		
+	<label class="item item-input" ng-class="{positive: login_error.errors.email}">
 		<input type="text" ng-model="login_user.email" placeholder="Email" >
+		<div ng-show="login_error.errors.email">
+		<div ng-repeat="field_error in login_error.errors.email">{{field_error}}</div>
+		</div>
 	</label>
-	<label class="item item-input">
+	
+
+	
+	
+	<label class="item item-input" ng-class="{positive: login_error.errors.password}">
 		<input type="password" ng-model="login_user.password" placeholder="Password">
+		<div ng-show="login_error.errors.password">
+		<div ng-repeat="field_error in login_error.errors.password">{{field_error}}</div>
+		</div>
 	</label>
 	<!--
 	<label class="item item-input">
@@ -16,7 +32,10 @@
 	-->
 	</div>
 	</br>
-	<button class="button  button-block button-assertive " ng-controller="DashCtrl" ng-click="login()">
+	<button class="button  button-block button-positive "  ng-click="login()">
+		Logiraj
+	</button>
+	<button class="button  button-block button-assertive "  ng-click="signUp()">
 		Registriraj
 	</button>
 
