--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -1,16 +1,18 @@
 
-<ion-view title="Postavke">
+<ion-view title="Postavke" >
 
   <ion-content class="padding" ng-controller="DashCtrl">
+  <!-- if ng-model="localEmail" exists don't show the below form-->
+  <div ng-if="localEmail">Prijavljeni ste kao {{localEmail}}. Nema potrebe za izmjenama. </div>
+  <div ng-if="!localEmail">Niste prijavljeni! Ako ste prvi put ovdje Registrirajte se. Ako ste to vec napravili, prijavite se s Vasim emailom. </div>
 	<div class="list">
 		<div ng-show="login_error.message" class="positive">
 			<p>{{login_error.message}}</p>
 		</div>
-		
 
-		
 	<label class="item item-input" ng-class="{positive: login_error.errors.email}">
-		<input type="text" ng-model="login_user.email" placeholder="Email" >
+		<input type="text" ng-model="login_user.email" placeholder="Email" value="{{localEmail}}">
+		
 		<div ng-show="login_error.errors.email">
 		<div ng-repeat="field_error in login_error.errors.email">{{field_error}}</div>
 		</div>
@@ -31,13 +33,19 @@
 	</label>
 	-->
 	</div>
+	
+	 <!--div od ng-if-a-->
 	</br>
+	<!-- if there exists window.localStorage['id'] then there is no need for signup (registriraj)-->
+
 	<button class="button  button-block button-positive "  ng-click="login()">
 		Logiraj
 	</button>
+	<!-- if there is no window.localStorage['id'] then we need to signup or logIn-->
 	<button class="button  button-block button-assertive "  ng-click="signUp()">
 		Registriraj
 	</button>
+
 
 	
 	
