place detail links working now (mail, phone, etc.)

--- a/templates/enemy-detail.html
+++ b/templates/enemy-detail.html
@@ -23,7 +23,7 @@
         <h4><strong>{{enemy.name}}</strong></br> <small>{{enemy.description}}</small></br> 
 		</br> 
 		-->
-		<img ng-src="http://locarda.herokuapp.com/{{enemy.image_url}}" width="100" height="100"/>
+		<img  ng-src="http://locarda.herokuapp.com/{{enemy.image_url}}" width="100" height="100"/>
 		<h4>{{enemy.rewards}}</h4>
 		</div>
 		  <div class="col col-33">
@@ -38,10 +38,10 @@
       <div class="list card">
           <a class="item item-icon-left"  ><i class="icon ion-flag"></i>Va&#353;i bodovi: <p ng-show="enemy.points != null"><span class="badge badge-assertive">{{enemy.points}}</span></p>
 																						  <p ng-show="enemy.points == null"><span class="badge badge-assertive">0</span></p></a>
-          <a ng-show="enemy.tel != null" class="item item-icon-left" href="tel:{{employee.officePhone}}"><i class="icon ion-ios7-telephone"></i>Tel.<p>{{enemy.tel}}</p></a>
-          <a ng-show="enemy.mob != null" class="item item-icon-left" href="tel:{{employee.cellPhone}}"><i class="icon ion-ios7-telephone"></i>Mob.<p>{{enemy.mob}}</p></a>
-          <a ng-show="enemy.mob != null" class="item item-icon-left" href="sms:{{employee.cellPhone}}"><i class="icon ion-chatbox-working"></i>SMS<p>{{enemy.mob}}</p></a>
-          <a ng-show="enemy.email != null" class="item item-icon-left" href="mailto:{{employee.email}}"><i class="icon ion-ios7-email"></i>Email<p>{{enemy.email}}</p></a>
+          <a ng-show="enemy.tel     != null" class="item item-icon-left" href="tel:{{enemy.tel}}"><i class="icon ion-ios7-telephone"></i>Tel.<p>{{enemy.tel}}</p></a>
+          <a ng-show="enemy.mob     != null" class="item item-icon-left" href="tel:{{enemy.mob}}"><i class="icon ion-ios7-telephone"></i>Mob.<p>{{enemy.mob}}</p></a>
+          <a ng-show="enemy.mob     != null" class="item item-icon-left" href="sms:{{enemy.mob}}"><i class="icon ion-chatbox-working"></i>SMS<p>{{enemy.mob}}</p></a>
+          <a ng-show="enemy.email   != null" class="item item-icon-left" href="mailto:{{enemy.email}}"><i class="icon ion-ios7-email"></i>Email<p>{{enemy.email}}</p></a>
 		  <a ng-show="enemy.address != null" class="item item-icon-left" ><i class="icon ion-clipboard"></i>Adresa<p>{{enemy.address}} </p></a>
       </div>
 
