tweaks to signup view

--- a/templates/tab-account.html
+++ b/templates/tab-account.html
@@ -1,4 +1,4 @@
-<ion-view title="Mjesta" ¨ng-controller="EnemiesCtrl">	
+<ion-view title="Mjesta">	
   <ion-content >
       <div ng-show="enemies != null">
 	  <ion-item ng-repeat="enemy in enemies" type="item-text-wrap" href="#/tab/enemy/{{enemy.id}}">	  
