--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -3,8 +3,16 @@
 
   <ion-content class="padding" ng-controller="DashCtrl">
   <!-- if ng-model="localEmail" exists don't show the below form-->
-  <div ng-if="localEmail">Prijavljeni ste kao <strong>{{localEmail}}</strong>. Nema potrebe za izmjenama. </div>
+  
+  <div class="card">
+  <div class="item item-text-wrap ">
+  <div ng-if="localEmail">Prijavljeni ste kao <strong>{{localEmail}}</strong>. Nema potrebe za izmjenama.</div>
   <div ng-if="!localEmail">Niste prijavljeni! Ako ste prvi put ovdje Registrirajte se. Ako ste to vec napravili, prijavite se s Vasim emailom. </div>
+  </div>
+</div>
+  
+  
+  
 	<div class="list">
 		<div ng-show="login_error.message" class="positive">
 			<p>{{login_error.message}}</p>
