mayor change to  - bug of not showing places resolved temporary, now calling API inside controller

--- a/templates/tab-account.html
+++ b/templates/tab-account.html
@@ -12,8 +12,8 @@
 	  
 	   <div class="card">
 		   <div class="item item-text-wrap">
-			  Tra&#382;im mjesta...<i class="ion-ios7-reloading"></i> &nbsp; Kliknite na  <a href="#/tab/dash"> postavke </a>ispod &nbsp;
-			  <i class="ion-arrow-down-c"></i>
+			  Tra&#382;im mjesta...<i class="ion-ios7-reloading"></i>
+			  
 			</div>
 		</div>
 	  
