--- a/templates/enemy-detail.html
+++ b/templates/enemy-detail.html
@@ -15,9 +15,18 @@
 
 <ion-view title="{{enemy.name}} - {{enemy.description}} ">
   <ion-content has-header="true" padding="true">
-
-     
+	 <!--
+	 <div ng-show="!enemy">	 
+	   <div class="card">
+		   <div class="item item-text-wrap">
+			  Loading...<i class="ion-ios7-reloading"></i>
+			  
+			</div>
+		</div>
+	 </div>
+	 -->
 	  <div class="row" >
+
 		<div class="col col-67">		
 		<!--		          
         <h4><strong>{{enemy.name}}</strong></br> <small>{{enemy.description}}</small></br> 
@@ -33,6 +42,7 @@
 	      </button>
 	      </div>
 	 </div>
+
 	   
 	  
       <div class="list card">
@@ -44,6 +54,6 @@
           <a ng-show="enemy.email   != null" class="item item-icon-left" href="mailto:{{enemy.email}}"><i class="icon ion-ios7-email"></i>Email<p>{{enemy.email}}</p></a>
 		  <a ng-show="enemy.address != null" class="item item-icon-left" ><i class="icon ion-clipboard"></i>Adresa<p>{{enemy.address}} </p></a>
       </div>
-
+	  
   </ion-content>
 </view>
