center an image on place detail

--- a/templates/enemy-detail.html
+++ b/templates/enemy-detail.html
@@ -44,9 +44,12 @@
 	      </div>
 	 </div>
 	 -->
-	  <div class="item item-body center">
-          <img ng-src="http://locarda.herokuapp.com/{{enemy.image_url}}">		  
+	 
+	  <div class="item item-image">
+          <img ng-src="http://locarda.herokuapp.com/{{enemy.image_url}}" center>
+		  <!--<img ng-src="img/bar1.jpg">-->
       </div>
+	 
 	  
 	  <div class="card">
 			<div class="item item-text-wrap">
