cordova push plugin,PushNotification.js, PushCustom.js added + ionicLoading txt&icon changed

--- a/templates/tab-account.html
+++ b/templates/tab-account.html
@@ -12,7 +12,7 @@
 	  
 	   <div class="card">
 		   <div class="item item-text-wrap">
-			  Tra&#382;im mjesta...<i class="ion-ios7-reloading"></i>
+			  Tra&#382;im mjesta...<i class="ion-load-c"></i>
 			  
 			</div>
 		</div>
