added rotating loop icon on intercept and removed it from places html

--- a/templates/tab-account.html
+++ b/templates/tab-account.html
@@ -8,17 +8,19 @@
 		 	
       </ion-item>  
 	  </div>
+	  <!--
 	  <div ng-show="!enemies">
 	  
 	   <div class="card">
 		   <div class="item item-text-wrap">
-			  Tra&#382;im mjesta...<i class="ion-load-c"></i>
+			  Tra&#382;im mjesta...<i class="icon ion-looping"></i>
 			  
 			</div>
 		</div>
 	  
 	  
 	  </div>
+	  -->
   </ion-content>
   
 
