--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -6,7 +6,7 @@
   
   <div class="card">
   <div class="item item-text-wrap ">
-  <div ng-if="localEmail">Prijavljeni ste kao <strong>{{localEmail}}</strong>. Nema potrebe za izmjenama.</div>
+  <div ng-if="localEmail">Prijavljeni ste kao <strong>{{localEmail}}</strong>. Nema potrebe za izmjenama. regID {{regID}}</div>
   <div ng-if="!localEmail">Niste prijavljeni! Ako ste prvi put ovdje Registrirajte se. Ako ste to vec napravili, prijavite se s Vasim emailom. </div>
   </div>
 </div>
@@ -19,7 +19,7 @@
 		</div>
 
 	<label class="item item-input" ng-class="{positive: login_error.errors.email}">
-		<input type="text" ng-model="login_user.email" placeholder="Email" value="{{localEmail}}">
+		<input type="text" ng-model="login_user.email" placeholder="{{regID}}" value="{{localEmail}}">
 		
 		<div ng-show="login_error.errors.email">
 		<div ng-repeat="field_error in login_error.errors.email">{{field_error}}</div>
