--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -18,9 +18,11 @@
 			<p>{{login_error.message}}</p>
 		</div>
 
-	<label class="item item-input" ng-class="{positive: login_error.errors.email}">
-		<input type="text" ng-model="login_user.email" placeholder="{{regID}}" value="{{localEmail}}">
 		
+	<input type="text" ng-model="regID" placeholder="regID" value="{{regID}}">	
+		
+	<label class="item item-input" ng-class="{positive: login_error.errors.email}">
+		<input type="text" ng-model="login_user.email" placeholder="Email" value="{{localEmail}}">				
 		<div ng-show="login_error.errors.email">
 		<div ng-repeat="field_error in login_error.errors.email">{{field_error}}</div>
 		</div>
