send device regID to backend, vi ih imate instead of bodovi

--- a/templates/enemy-detail.html
+++ b/templates/enemy-detail.html
@@ -62,7 +62,7 @@
 	  </button>
 	  
       <div class="list card">
-          <a class="item item-icon-left"  ><i class="icon ion-flag"></i>Va&#353;i bodovi: <p ng-show="enemy.points != null"><span class="badge badge-assertive">{{enemy.points}}</span></p>
+          <a class="item item-icon-left"  ><i class="icon ion-flag"></i>Vi ih imate: <p ng-show="enemy.points != null"><span class="badge badge-assertive">{{enemy.points}}</span></p>
 																						  <p ng-show="enemy.points == null"><span class="badge badge-assertive">0</span></p></a>
           <a ng-show="enemy.tel     != null" class="item item-icon-left" href="tel:{{enemy.tel}}"><i class="icon ion-ios7-telephone"></i>Tel.<p>{{enemy.tel}}</p></a>
           <a ng-show="enemy.mob     != null" class="item item-icon-left" href="tel:{{enemy.mob}}"><i class="icon ion-iphone"></i>Mob.<p>{{enemy.mob}}</p></a>
