removing alerts, googleregId display, config xml version&author added

--- a/templates/tab-account.html
+++ b/templates/tab-account.html
@@ -27,3 +27,14 @@
 	
 </ion-view>
 
+<!-- 
+	template sa slikama
+	<div ng-show="enemies != null">
+	  <ion-item  class="item item-avatar" ng-repeat="enemy in enemies" type="item-text-wrap" href="#/tab/enemy/{{enemy.id}}">	  
+	      <img ng-src="http://locarda.herokuapp.com/{{enemy.image_url}}" >   
+		<strong>{{enemy.name}}</strong></br>
+		<small>{{enemy.full_name}}</small>		
+		 	
+      </ion-item>  
+	  </div>
+-->
