--- a/templates/tab-dash.html
+++ b/templates/tab-dash.html
@@ -46,17 +46,17 @@
 	</br>
 	<!-- if there exists window.localStorage['id'] then there is no need for signup (registriraj)-->
 
-	<button class="button  button-block button-positive "  ng-click="login()">
-		Logiraj
+	<button class="button  button-block button-light "  ng-click="login()">
+		Prijavi me
 	</button>
 	<!-- if there is no window.localStorage['id'] then we need to signup or logIn-->
-	<button class="button  button-block button-assertive "  ng-click="signUp()">
-		Registriraj
+	<button class="button  button-block button-dark "  ng-click="signUp()">
+		Registriraj me
 	</button>
 	
-	<!-- to be removed-->
+	<!-- to be removed
 	<input type="text" ng-model="regID" placeholder="regID" value="{{regID}}">	
-	
+	-->
 	
   </ion-content>
 </ion-view>
